avoid content highlight with shift key

--- a/src/css/bookmarkList.css
+++ b/src/css/bookmarkList.css
@@ -11,7 +11,15 @@
   padding-left: 5px;
   font-weight: 200;
   position: relative;
-  user-select: none;
+}
+
+.bookmark-base h1,
+.bookmark-base h2,
+.bookmark-base button {
+  user-select: none; /* CSS3 (little to no support) */
+  -ms-user-select: none; /* IE 10+ */
+  -moz-user-select: none; /* Gecko (Firefox) */
+  -webkit-user-select: none;
 }
 
 .bookmark-base.selected {
